tdf#135710 doc import:  force page center on inline images

Relative anchoring is irrelevant for inline images,
so it is safe to do this in terms of writer layout.

The benefit is clearly seen when the user changes
from inline to anchored. In ODT format,
that results in a centered image in the paragraph,
while in DOC it was anchored somehow to a character
and didn't lay out nicely at all after the transition.

So this is mainly just side-stepping a layout issue in Writer
(because checking the properties and hitting OK shifted the image).

Change-Id: I6ff7a191d78bc1597ee9f053e02f161565a27174
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152683
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>